<resources>
    <string name="app_name">CDA1-Android</string>
    <string name="txtTitle">Epsi</string>
    <string name="txtNature">Nature</string>
    <string name="txtSpace">Espace</string>
    <string name="txtPhotos">Photos</string>
    <string name="txtRoll">Roll</string>
    <string name="txtLogin">Login</string>
    <string name="txtSave">Sauvegarder</string>
    <string name="txtEmail">Email</string>
    <string name="txtAdress">Adress</string>
    <string name="txtPassword">Password</string>
    <string name="txtNom">Nom</string>
    <string name="txtStudents">Qr Code</string>
    <string name="txtCreate">Création de compte</string>
    <string name="txtTabbar">Informations</string>
    <string name="txtTab1">Tab1</string>
    <string name="txtTab2">Tab2</string>
    <string name="txtTab3">Tab3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtHome">Accueil</string>
    <string name="txtQrCode">QRCode</string>
    <string name="txtFillOutTheFormManually">Remplir le formulaire manuellement</string>
    <string name="editTextLastName">Nom</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextFirstName">Prénom</string>
    <string name="editTextAddress">Adresse</string>
    <string name="editTextZipCode">Code Postal</string>
    <string name="editTextCity">Ville</string>
    <string name="editTextCardRef">Carte de fidélité</string>
    <string name="buttonTextCreate">Créer</string>
    <string name="buttonModifyAccount">Enregistrer les modifications</string>
    <string name="my_card">Ma carte</string>
    <string name="cart">Panier</string>
    <string name="rooms">Salles</string>
    <string name="movies">Films</string>
    <string name="firtName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="add_to_cart" />
    <string name="film_details" />
    <string name="back_arrow_description" />
    <string name="retour_description" />
</resources>