<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountCreationFormActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/editTextFirstName"
        style="@style/EditTextEpsi"
        android:hint="@string/editTextFirstName"/>

    <EditText
        android:id="@+id/editTextLastName"
        style="@style/EditTextEpsi"
        android:hint="@string/editTextLastName"/>

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditTextEpsi"
        android:hint="@string/editTextEmail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editTextAddress"
        style="@style/EditTextEpsi"
        android:hint="@string/editTextAddress"/>

    <EditText
        android:id="@+id/editTextZipCode"
        style="@style/EditTextEpsi"
        android:hint="@string/editTextZipCode"/>

    <EditText
        android:id="@+id/editTextCity"
        style="@style/EditTextEpsi"
        android:hint="@string/editTextCity"/>

    <EditText
        android:id="@+id/editTextCardRef"
        style="@style/EditTextEpsi"
        android:hint="@string/editTextCardRef"/>


    <Button
        android:layout_marginTop="70dp"
        android:id="@+id/buttonCreateAccount"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextCreate" />



</LinearLayout>