<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextTextNom"
        style="@style/EditTextEpsi"
        android:hint="@string/txtNom"/>
    <EditText
        style="@style/EditTextEpsi"
        android:id="@+id/editTextEmail"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"/>

    <EditText
        style="@style/EditTextEpsi"
        android:id="@+id/editTextTextAdress"
        android:hint="@string/txtAdress"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/txtSave" />



</LinearLayout>