<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                style="@style/EditTextEpsi"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress" />
            <EditText
                style="@style/EditTextEpsi"
                android:id="@+id/editTextTextPassword"
                android:hint="@string/txtPassword"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_gravity="center_horizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/txtLogin" />
</LinearLayout>