<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/layoutHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/holo_gray_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMovies"
            style="@style/ButtonFragments"
            android:background="@color/holo_blue_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movies"/>
        <TextView
            android:id="@+id/textViewRoomHomeFragment"
            style="@style/ButtonFragments"
            android:background="@color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rooms"/>

        <TextView
            android:id="@+id/textViewMyCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ButtonFragments"
            android:text="@string/my_card"/>
        <TextView
            android:id="@+id/textViewCartHomeFragment"
            style="@style/ButtonFragments"
            android:background="@color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cart"/>

    </LinearLayout>
</LinearLayout>
